# gpseq

./: .travis.yml  CHANGELOG.md  INSTALL.md  README.md  codecov.yml  gpseq.doap  grabber.sh  meson.build  meson_options.txt
benchmark/: README.md  benchmark-chop.vala  benchmark-collect.vala  benchmark-complex.vala  benchmark-filter.vala  benchmark-find.vala  benchmark-flat-map.vala  benchmark-map.vala  benchmark-max.vala  benchmark-reduce.vala  benchmark-sort.vala  benchmark.vala  benchmarks.vala  meson.build  utils.vala
src/: ArrayBuffer.vala  ArrayBufferSpliterator.vala  ArraySpliterator.vala  AtomicBoolRef.vala  AtomicIntRef.vala  AtomicObjectRef.vala  CollectTask.vala  Collector.vala  CollectorFeatures.vala  Collectors.vala  CombineFunc.vala  Comparator.vala  ConcatArrayBuffer.vala  Consumer.vala  Container.vala  DefaultContainer.vala  DefaultQueueBalancer.vala  DefaultSupplier.vala  DefaultTaskEnv.vala  DistinctContainer.vala  EachChunkFunc.vala  EmptySpliterator.vala  Executor.vala  FilteredContainer.vala  FindTask.vala  FlatMappedContainer.vala  FoldTask.vala  ForEachTask.vala  ForkJoinPool.vala  ForkJoinTask.vala  ForkJoinThread.vala  GenericArraySpliterator.vala  Gpseq.vala  IteratorSpliterator.vala  ListSpliterator.vala  MappedContainer.vala  MatchTask.vala  Optional.vala  OptionalError.vala  OrderedSliceTask.vala  (+22 more)
src/collectors/: ConcurrentListCollector.vala  GenericArrayCollector.vala  ListCollector.vala  SumDoubleCollector.vala  SumFloatCollector.vala  SumInt32Collector.vala  SumInt64Collector.vala  SumIntCollector.vala  SumLongCollector.vala  SumUint32Collector.vala  SumUint64Collector.vala  SumUintCollector.vala  SumUlongCollector.vala
tests/: IntSeqTests.vala  NullableIntSeqTests.vala  NullableStringSeqTests.vala  SeqTests.vala  StringSeqTests.vala  SubArrayTests.vala  TestSuite.vala  TestUtils.vala  UtilsTests.vala  meson.build  test.vala
